Practice slider - Banner

--- a/pratice.html
+++ b/pratice.html
@@ -56,6 +56,28 @@
     </nav>
   </header>
 
+  <section id="banner-rotativo" class="carousel slide" data-bs-ride="carousel">
+    <article class="carousel-inner">
+      <figure class="carousel-item active">
+        <img src="https://fakeimg.pl/500x200/" class="d-block w-100" alt="...">
+      </figure>
+      <figure class="carousel-item">
+        <img src="https://fakeimg.pl/500x200/" class="d-block w-100" alt="...">
+      </figure>
+      <figure class="carousel-item">
+        <img src="https://fakeimg.pl/500x200/" class="d-block w-100" alt="...">
+      </figure>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#banner-rotativo" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#banner-rotativo" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+  </section>
+
 
 
 
