--- a/pratice.html
+++ b/pratice.html
@@ -55,7 +55,7 @@
       </div>
     </nav>
   </header>
-
+  <!-- Banner Rotativo -->
   <section id="banner-rotativo" class="carousel slide" data-bs-ride="carousel">
     <article class="carousel-inner">
       <figure class="carousel-item active">
@@ -77,8 +77,68 @@
         <span class="visually-hidden">Next</span>
       </button>
   </section>
-
-
+  <!-- Cards - Main -->
+  <main class="mt-4 mb-5"></main>
+  <div class="mx-auto row">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Título especial</h5>
+          <p class="card-text">Com suporte a texto embaixo, que funciona como uma introdução a um conteúdo
+            adicional.</p>
+          <a href="#" class="btn btn-primary">Visitar</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Título especial</h5>
+          <p class="card-text">Com suporte a texto embaixo, que funciona como uma introdução a um conteúdo
+            adicional.</p>
+          <a href="#" class="btn btn-primary">Visitar</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  </main>
+  <!-- Footer -->
+  <footer class="container-fluid text-white bg-dark">
+    <div class="row pt-5 pb-5">
+      <section class="col-md-5">
+        <h5>Album</h5>
+        <ul>
+          <li>
+            <a href="">Test</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="">Test</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="">Test</a>
+          </li>
+        </ul>
+      </section>
+      <section class="col-md-5">
+        <h5>Contato</h5>
+        <ul>
+          <li>
+            <a href="tel:+551311111111">Tel: 9 9999-9999</a>
+          </li>
+          <li>
+            <a href="tel:+551311111111">Tel: 9 9999-9999</a>
+          </li>
+        </ul>
+      </section>
+      <section class="col-md-2">
+        <a href="#">Voltar ao topo</a>
+      </section>
+    </div>
+  </footer>
 
 
 
